feat: use migrations and add albums view:
* also fix player by not using `$refs`
