# server/spec/monkey.swagger.json
@@ -16,6 +16,28 @@
     "application/json"
   ],
   "paths": {
+    "/v1/albums": {
+      "get": {
+        "operationId": "Monkey_ListAllAlbums",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/specAllAlbumsReply"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "tags": [
+          "Monkey"
+        ]
+      }
+    },
     "/v1/artist/{artistId}/album/{albumId}/songs": {
       "get": {
         "operationId": "Monkey_ListSongs",
@@ -166,6 +188,36 @@
         "artistId": {
           "type": "string",
           "format": "int64"
+        }
+      }
+    },
+    "specAllAlbum": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "artistName": {
+          "type": "string"
+        },
+        "artistId": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "specAllAlbumsReply": {
+      "type": "object",
+      "properties": {
+        "albums": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/specAllAlbum"
+          }
         }
       }
     },
